--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 * {
-    margin: 0;
-    padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	font-family: 'Chakra Petch', sans-serif;
 }
