--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,7 +21,7 @@ body {
 }
 
 
-//NAV-burger
+//NAV
 .burger-btn {
 	position: fixed;
 	top: 20px;
@@ -30,7 +30,7 @@ body {
 	background: none;
 	border: 1px solid transparent;
 	cursor: pointer;
-	z-index: 100;
+	z-index: 1000;
 
 	&:focus {
 		outline: none;
