--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,22 +1,23 @@
-$scale-black: #1c2128;
-$scale-white: #cdd9e5;
-$scale-gray-0: #cdd9e5;
-$scale-gray-1: #adbac7;
-$scale-gray-2: #909dab;
-$scale-gray-3: #768390;
-$scale-gray-4: #636e7b;
-$scale-gray-5: #545d68;
-$scale-gray-6: #444c56;
-$scale-gray-7: #373e47;
-$scale-gray-8: #2d333b;
-$scale-gray-9: #22272e;
-$scale-blue-0: #c6e6ff;
-$scale-blue-1: #96d0ff;
-$scale-blue-2: #6cb6ff;
-$scale-blue-3: #539bf5;
-$scale-blue-4: #4184e4;
-$scale-blue-5: #316dca;
-$scale-blue-6: #255ab2;
-$scale-blue-7: #1b4b91;
-$scale-blue-8: #143d79;
-$scale-blue-9: #0f2d5c;
+$black: #1c2128;
+$white: #f2f4f7;
+$pure-white: #fff;
+$gray-0: #cdd9e5;
+$gray-1: #adbac7;
+$gray-2: #909dab;
+$gray-3: #768390;
+$gray-4: #636e7b;
+$gray-5: #545d68;
+$gray-6: #444c56;
+$gray-7: #373e47;
+$gray-8: #2d333b;
+$gray-9: #22272e;
+$blue-0: #c6e6ff;
+$blue-1: #96d0ff;
+$blue-2: #6cb6ff;
+$blue-3: #539bf5;
+$blue-4: #4184e4;
+$blue-5: #316dca;
+$blue-6: #255ab2;
+$blue-7: #1b4b91;
+$blue-8: #143d79;
+$blue-9: #0f2d5c;
