--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,12 @@ body {
   font-size: 1.6rem;
 }
 
+.wrapper {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+}
+
 .burger-btn {
   position: fixed;
   top: 20px;
