--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,12 @@ body {
     font-size: 1.6rem;
 }
 
+.wrapper {
+	margin: 0 auto;
+	width: 100%;
+	max-width: 1200px;
+}
+
 
 //NAV
 .burger-btn {
