--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @use 'colors' as *;
+@use 'fonts';
 
 
 *,
@@ -15,7 +16,7 @@ html {
 }
 
 body {
-	font-family: 'Chakra Petch', sans-serif;
+	font-family: 'chakra_400_norm', sans-serif;
     background-color: $gray-5;
     font-size: 1.6rem;
 }
