--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,8 @@ html {
 
 body {
   font-family: "chakra_400_norm", sans-serif;
-  background-color: #545d68;
+  background-color: #22272e;
+  color: #909dab;
   font-size: 1.6rem;
 }
 
@@ -105,7 +106,8 @@ body {
   border: 1px solid #fff;
   border-radius: 8px;
 }
-.burger-btn:hover .burger-btn__bars::after, .burger-btn:hover .burger-btn__bars::before {
+.burger-btn:hover .burger-btn__bars::after,
+.burger-btn:hover .burger-btn__bars::before {
   width: 100%;
 }
 .burger-btn__box {
@@ -122,7 +124,7 @@ body {
   transition: width 0.3s;
 }
 .burger-btn__bars {
-  width: 75%;
+  width: 80%;
 }
 .burger-btn__bars::after {
   top: 13px;
@@ -130,6 +132,18 @@ body {
 }
 .burger-btn__bars::before {
   top: 27px;
-  width: 85%;
+  width: 65%;
   transition-delay: 0.1s;
+}
+
+.nav-brand, .nav__link {
+  display: none;
+}
+
+.header {
+  position: relative;
+  height: 100vh;
+}
+.header__box-extra {
+  display: none;
 }/*# sourceMappingURL=main.css.map */
