Finish nav for mobiles

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -21,3 +21,5 @@ $blue-6: #255ab2;
 $blue-7: #1b4b91;
 $blue-8: #143d79;
 $blue-9: #0f2d5c;
+
+$black-blue-gradient: linear-gradient(to right, rgb(15, 45, 92) 0%, black 100%)
