--- a/css/main.css
+++ b/css/main.css
@@ -80,9 +80,9 @@ html {
 
 body {
   font-family: "chakra_400_norm", sans-serif;
+  font-size: 1.6rem;
   background-color: #22272e;
   color: #909dab;
-  font-size: 1.6rem;
 }
 
 .wrapper {
@@ -103,7 +103,7 @@ body {
 }
 .burger-btn:focus {
   outline: none;
-  border: 1px solid #fff;
+  border: 1px solid #f2f4f7;
   border-radius: 8px;
 }
 .burger-btn:hover .burger-btn__bars::after,
@@ -124,11 +124,11 @@ body {
   transition: width 0.3s;
 }
 .burger-btn__bars {
-  width: 80%;
+  width: 100%;
 }
 .burger-btn__bars::after {
   top: 13px;
-  width: 145%;
+  width: 125%;
 }
 .burger-btn__bars::before {
   top: 27px;
@@ -136,8 +136,47 @@ body {
   transition-delay: 0.1s;
 }
 
-.nav-brand, .nav__link {
+.nav {
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(to right, rgb(15, 45, 92) 0%, black 100%);
+  transform: translateX(102%);
+  transition: transform 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
+  z-index: 100;
+}
+.nav--active {
+  transform: translateX(0);
+}
+.nav__brand {
   display: none;
+}
+.nav__item {
+  position: relative;
+  display: block;
+  margin: 0.5em 0;
+  padding: 0.5em 2em;
+  font-size: 2.8rem;
+  color: #f2f4f7;
+  text-decoration: none;
+}
+.nav__item::before {
+  content: "";
+  position: absolute;
+  bottom: 5px;
+  left: 2em;
+  width: 50px;
+  height: 2px;
+  background-color: #f2f4f7;
+  transform: scaleX(0);
+  transition: transform 0.3s;
+}
+.nav__item:hover::before {
+  transform: scaleX(1);
 }
 
 .header {
@@ -146,4 +185,15 @@ body {
 }
 .header__box-extra {
   display: none;
+}
+
+@media (min-width: 768px) {
+  .nav__item {
+    font-size: 3.2rem;
+  }
+}
+@media (min-width: 992px) {
+  .nav__item {
+    font-size: 4rem;
+  }
 }/*# sourceMappingURL=main.css.map */
