--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,9 +17,9 @@ html {
 
 body {
 	font-family: 'chakra_400_norm', sans-serif;
+	font-size: 1.6rem;
 	background-color: $gray-9;
 	color: $gray-2;
-	font-size: 1.6rem;
 }
 
 .wrapper {
@@ -41,7 +41,7 @@ body {
 
 	&:focus {
 		outline: none;
-		border: 1px solid $pure-white;
+		border: 1px solid $white;
 		border-radius: 8px;
 	}
 
@@ -70,11 +70,11 @@ body {
 	}
 
 	&__bars {
-		width: 80%;
+		width: 100%;
 
 		&::after {
 			top: 13px;
-			width: 145%;
+			width: 125%;
 		}
 
 		&::before {
@@ -86,9 +86,50 @@ body {
 }
 
 .nav {
-	&-brand,
-	&__link {
+	position: fixed;
+	top: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100%;
+	background-image: $black-blue-gradient;
+	transform: translateX(102%);
+	transition: transform 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
+	z-index: 100;
+
+	&--active {
+		transform: translateX(0);
+	}
+
+	&__brand {
 		display: none;
+	}
+
+	&__item {
+		position: relative;
+		display: block;
+		margin: 0.5em 0;
+		padding: 0.5em 2em;
+		font-size: 2.8rem;
+		color: $white;
+		text-decoration: none;
+
+		&::before {
+			content: '';
+			position: absolute;
+			bottom: 5px;
+			left: 2em;
+			width: 50px;
+			height: 2px;
+			background-color: $white;
+			transform: scaleX(0);
+			transition: transform .3s;
+		}
+
+		&:hover::before {
+			transform: scaleX(1);
+		}
 	}
 }
 
@@ -107,3 +148,22 @@ body {
 // background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 // background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
 // background-image: linear-gradient(180deg, #2af598 0%, #009efd 100%);
+
+
+@media (min-width: 768px) {
+	.nav {
+
+		&__item {
+			font-size: 3.2rem;
+		}
+	}
+}
+
+@media (min-width: 992px) {
+	.nav {
+
+		&__item {
+			font-size: 4rem;
+		}
+	}
+}
