Start header section for mobile - SCSS

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -15,6 +15,6 @@ $gray-8: #2d333b;
 $background: #22272e;
 
 
-$secondary-color: linear-gradient(180deg, #009efd 30%, #2af598 100%);
+$secondary: linear-gradient(180deg, #2af598 0%, #239fec 100%);
 
-$nav-bg: linear-gradient(to right, rgb(15, 45, 92) 0%, black 100%);
+$nav-bg: linear-gradient(to right, rgb(50, 124, 243) 0%, rgb(65, 201, 137) 100%);
