--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ body {
   align-items: center;
   height: 100vh;
   width: 100%;
-  background-image: linear-gradient(to right, rgb(15, 45, 92) 0%, black 100%);
+  background-image: linear-gradient(to right, rgb(50, 124, 243) 0%, rgb(65, 201, 137) 100%);
   transform: translateX(102%);
   transition: transform 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
   z-index: 100;
@@ -168,6 +168,62 @@ body {
   position: relative;
   height: 100vh;
 }
+.header__box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  border: transparent;
+}
+.header__box-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.1em 0.3em;
+  background-color: #444c56;
+  color: #f2f4f7;
+}
+.header__box-bar__page-name {
+  font-size: 1.5rem;
+  padding-left: 0.5em;
+}
+.header__box-bar__options {
+  display: flex;
+  align-items: center;
+}
+.header__box-bar__options .bar-option {
+  height: 20px;
+  margin: 0 0.2em;
+}
+.header__box-bar__options .bar-option:first-child {
+  position: relative;
+  top: -3px;
+  width: 18px;
+  margin-right: 0.5em;
+  border-bottom: 2px solid #f2f4f7;
+}
+.header__box-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid #444c56;
+  border-top: transparent;
+}
+.header__box-page-text {
+  display: flex;
+  flex-direction: column;
+  margin: 1.5em;
+}
+.header__box-page-text .welcome-text {
+  margin-bottom: 1em;
+  text-align: center;
+  font-size: 1.6rem;
+}
+.header__box-page-text-title {
+  font-size: 2.8rem;
+  text-align: center;
+}
 .header__box-extra {
   display: none;
 }
@@ -183,8 +239,8 @@ body {
   }
   .nav {
     justify-content: space-between;
-    height: 7vh;
     padding: 0.5em 5em;
+    height: 7vh;
     background-image: none;
     -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
@@ -197,16 +253,23 @@ body {
   }
   .nav__brand {
     display: block;
-    font-size: 2.8rem;
-    background-image: linear-gradient(180deg, #009efd 30%, #2af598 100%);
+    background-image: linear-gradient(180deg, #2af598 0%, #239fec 100%);
     -webkit-background-clip: text;
             background-clip: text;
     -webkit-text-fill-color: transparent;
     text-decoration: none;
+  }
+  .nav__brand-logo {
+    font-size: 2.8rem;
     font-family: "chakra_700_norm";
+  }
+  .nav__brand-slogan {
+    margin-left: 2em;
+    font-size: 1.5rem;
   }
   .nav__item {
     position: relative;
+    padding: 0.5em 1em;
     font-size: 1.8rem;
     z-index: 0;
   }
