--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @use 'colors' as *;
-@use 'fonts';
 @use 'animations';
+@use 'fonts';
 
 *,
 *::after,
@@ -93,7 +93,7 @@ body {
 	align-items: center;
 	height: 100vh;
 	width: 100%;
-	background-image: $nav-bg;
+	background-image: $gradient-to-right;
 	transform: translateX(102%);
 	transition: transform 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 	z-index: 100;
@@ -111,7 +111,7 @@ body {
 		margin: 0.5em 0;
 		padding: 0.5em 2em;
 		font-size: 2.8rem;
-		color: $white;
+		color: $black;
 		text-decoration: none;
 	}
 }
@@ -120,77 +120,95 @@ body {
 .header {
 	position: relative;
 	height: 100vh;
+	background-image: $bg-shadow, url('../img/bg-small.jpg');
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
 
 	&__box {
-		position: absolute;
-		top: 40%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		width: 90%;
-		border: transparent;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		height: 100%;
+		color: $white;
+		text-align: center;
 
-		&-bar {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			padding: 0.1em 0.3em;
-			background-color: $gray-6;
-			color: $white;
-
-			&__page-name {
-				font-size: 1.5rem;
-				padding-left: 0.5em;
+		&-text {
+			.custom-p {
+				font-size: 2.5rem;
+				font-family: 'chakra_700_norm', sans-serif;
+				text-transform: uppercase;
+				background-image: $gradient-180deg;
+				background-clip: text;
+				-webkit-text-fill-color: transparent;
+				letter-spacing: 2px;
+				cursor: url('../img/custom-cursor_.png'), auto;
 			}
 
-			&__options {
-				display: flex;
-				align-items: center;
-
-				.bar-option {
-					height: 20px;
-					margin: 0 0.2em;
-				}
-
-				.bar-option:first-child {
-					position: relative;
-					top: -3px;
-					width: 18px;
-					margin-right: 0.5em;
-					border-bottom: 2px solid $white;
-				}
+			.welcome-text {
+				padding: 0.5em;
+				font-size: 2rem;
 			}
 		}
 
-		&-page {
+		&-title {
+			position: relative;
 			display: flex;
-			flex-direction: column;
-			align-items: center;
-			border: 2px solid $gray-6;
-			border-top: transparent;
+			justify-content: center;
+			text-align: center;
 
-			&-text {
-				display: flex;
-				flex-direction: column;
-				margin: 1.5em;
+			&-element {
+				position: absolute;
+				font-family: 'chakra_700_norm', sans-serif;
+				font-size: 10rem;
+				opacity: 0.2;
+			}
 
-				.welcome-text {
-					margin-bottom: 1em;
-					text-align: center;
-					font-size: 1.6rem;
-				}
+			&-element:first-child {
+				top: 0.5em;
+				left: 0.2em;
+			}
 
-				&-title {
-					font-size: 2.8rem;
-					text-align: center;
-				}
+			&-element:last-child {
+				top: 0.8em;
+				right: 0.2em;
+			}
+
+			.typewriter-text {
+				max-width: 90%;
+				margin-top: 3em;
+				font-size: 3rem;
+				font-weight: normal;
 			}
 		}
 
-		&-extra {
-			display: none;
+		&-socialmedia {
+			padding-top: 5em;
+
+			.socialmedia-link {
+				display: inline-block;
+				padding: 10px;
+				text-decoration: none;
+
+				&:hover {
+					animation: grow 0.3s forwards;
+				}
+			}
 		}
 	}
+
+	&__arrow {
+		display: block;
+		position: absolute;
+		left: calc(50% - 35px);
+		bottom: -10px;
+		padding: 0.5em;
+		font-size: 30px;
+		animation: breath-animation 2s infinite;
+	}
 }
+
 //____________________________________________________________
 
 @media (min-width: 768px) {
@@ -222,14 +240,14 @@ body {
 
 		&__brand {
 			display: block;
-			background-image: $secondary;
+			background-image: $gradient-180deg;
 			background-clip: text;
 			-webkit-text-fill-color: transparent;
 			text-decoration: none;
 
 			&-logo {
 				font-size: 2.8rem;
-				font-family: 'chakra_700_norm';
+				font-family: 'chakra_700_norm', sans-serif;
 			}
 
 			&-slogan {
@@ -241,6 +259,7 @@ body {
 		&__item {
 			position: relative;
 			padding: 0.5em 1em;
+			color: $white;
 			font-size: 1.8rem;
 			z-index: 0;
 
