--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -14,6 +14,7 @@ $gray-8: #2d333b;
 
 $background: #22272e;
 $bg-shadow: linear-gradient(45deg, rgba(0, 0, 0, 0.418), rgba(0, 0, 0, 0.911));
+$nav-shadow: linear-gradient(180deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.001));
 
 
 $gradient-180deg: linear-gradient(180deg, #2af598 0%, #239fec 100%);
