--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -11,8 +11,15 @@ $gray-5: #545d68;
 $gray-6: #444c56;
 $gray-7: #373e47;
 $gray-8: #2d333b;
+$gray-9: #222222;
 
-$background: #22272e;
+$background-dark: #222222;
+$background-light: #cdd9e5;
+
+$font-dark: #909dab;
+$font-light: #2d333b;
+
+
 $bg-shadow: linear-gradient(45deg, rgba(0, 0, 0, 0.418), rgba(0, 0, 0, 0.911));
 $nav-shadow: linear-gradient(180deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.001));
 
