Finish abt-me section for mobiles

--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,15 @@ body {
   max-width: 1200px;
 }
 
+.text-title {
+  padding: 0.8em 0;
+  background-image: linear-gradient(180deg, #2af598 0%, #239fec 100%);
+  -webkit-background-clip: text;
+          background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 1.7rem;
+}
+
 .burger-btn {
   position: fixed;
   top: 20px;
@@ -263,6 +272,70 @@ body {
   padding: 0.5em;
   font-size: 30px;
   animation: breath-animation 2s infinite;
+}
+
+.abt-me {
+  margin: 1.5em;
+}
+.abt-me__quote {
+  position: relative;
+  margin: 2em 2em;
+  padding-bottom: 2em;
+}
+.abt-me__quote-text {
+  text-align: center;
+  font-size: 2.5rem;
+}
+.abt-me__quote-quoter {
+  position: absolute;
+  font-size: 10rem;
+  opacity: 0.2;
+}
+.abt-me__quote-quoter:first-child {
+  top: -0.4em;
+  left: -0.4em;
+}
+.abt-me__quote-quoter:last-child {
+  bottom: -0.6em;
+  right: -0.4em;
+}
+.abt-me__text {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding-top: 2em;
+}
+.abt-me__text-lines {
+  margin-bottom: 1em;
+  line-height: 1.2em;
+  letter-spacing: 0.5px;
+}
+.abt-me__text-lines span {
+  font-weight: bold;
+}
+.abt-me__text-more-btn, .abt-me__text-less-btn {
+  position: absolute;
+  right: 0;
+  margin: 0.5em;
+  padding: 0.3em;
+  background: none;
+  border: 1px solid #cdd9e5;
+  border-radius: 1px;
+  color: #cdd9e5;
+  cursor: pointer;
+}
+.abt-me__text--inactive {
+  display: none;
+}
+.abt-me__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 6em;
+}
+.abt-me__img img {
+  height: 300px;
+  filter: grayscale(1);
 }
 
 @media (min-width: 576px) {
