--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,6 +28,14 @@ body {
 	max-width: 1200px;
 }
 
+.text-title {
+	padding: 0.8em 0;
+	background-image: $gradient-180deg;
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
+	font-size: 1.7rem;
+}
+
 //NAV
 .burger-btn {
 	position: fixed;
@@ -212,10 +220,89 @@ body {
 	}
 }
 
+.abt-me {
+	margin: 1.5em;
+
+	&__quote {
+		position: relative;
+		margin: 2em 2em;
+		padding-bottom: 2em;
+
+		&-text {
+			text-align: center;
+			font-size: 2.5rem;
+		}
+
+		&-quoter {
+			position: absolute;
+			font-size: 10rem;
+			opacity: 0.2;
+
+			&:first-child {
+				top: -.4em;
+				left: -0.4em;
+				// right: 0;
+			}
+
+			&:last-child {
+				bottom: -.6em;
+				right: -.4em;
+			}
+		}
+	}
+
+	&__text {
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		padding-top: 2em;
+
+		&-lines {
+			margin-bottom: 1em;
+			line-height: 1.2em;
+			letter-spacing: 0.5px;
+
+			span {
+				font-weight: bold;
+			}
+		}
+
+		&-more-btn,
+		&-less-btn {
+			position: absolute;
+			right: 0;
+			margin: 0.5em;
+			padding: 0.3em;
+			background: none;
+			border: 1px solid $background-light;
+			border-radius: 1px;
+			color: $background-light;
+			cursor: pointer;
+		}
+
+		&--inactive {
+			display: none;
+		}
+	}
+
+
+	//TODO zdjęcie do dokończenia
+	&__img {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding-top: 6em;
+
+		img {
+			height: 300px;
+			filter: grayscale(1);
+		}
+	}
+}
+
 //____________________________________________________________
 
 @media (min-width: 576px) {
-
 	.header {
 		&__box {
 			&-text {
@@ -230,7 +317,6 @@ body {
 			}
 
 			&-title {
-				
 				&-element {
 					font-size: 12rem;
 				}
@@ -243,8 +329,6 @@ body {
 		}
 	}
 }
-
-
 
 @media (min-width: 768px) {
 	.nav {
@@ -267,7 +351,6 @@ body {
 			}
 
 			&-title {
-
 				.typewriter-text {
 					max-width: 90%;
 					font-size: 4rem;
