--- a/sass/main.scss
+++ b/sass/main.scss
@@ -239,14 +239,14 @@ body {
 			opacity: 0.2;
 
 			&:first-child {
-				top: -.4em;
+				top: -0.4em;
 				left: -0.4em;
 				// right: 0;
 			}
 
 			&:last-child {
-				bottom: -.6em;
-				right: -.4em;
+				bottom: -0.6em;
+				right: -0.4em;
 			}
 		}
 	}
@@ -276,8 +276,30 @@ body {
 			background: none;
 			border: 1px solid $background-light;
 			border-radius: 1px;
-			color: $background-light;
+			color: $font-dark;
 			cursor: pointer;
+			z-index: 5;
+
+			&::before {
+				content: '';
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				height: 0;
+				width: 100%;
+				background-color: $white;
+				transform: none;
+				transition: height 0.3s;
+				z-index: -1;
+			}
+
+			&:hover {
+				color: $black;
+			}
+
+			&:hover::before {
+				height: 100%;
+			}
 		}
 
 		&--inactive {
@@ -285,12 +307,14 @@ body {
 		}
 	}
 
-
 	//TODO zdjęcie do dokończenia
 	&__img {
+		position: relative;
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		height: 100%;
+		width: 100%;
 		padding-top: 6em;
 
 		img {
