--- a/sass/main.scss
+++ b/sass/main.scss
@@ -225,7 +225,8 @@ body {
 
 	&__quote {
 		position: relative;
-		margin: 2em 2em;
+		padding: 2em auto;
+		margin: 4em 0;
 		padding-bottom: 2em;
 
 		&-text {
@@ -240,13 +241,12 @@ body {
 
 			&:first-child {
 				top: -0.4em;
-				left: -0.4em;
-				// right: 0;
+				left: -0.1em;
 			}
 
 			&:last-child {
 				bottom: -0.6em;
-				right: -0.4em;
+				right: -0.1em;
 			}
 		}
 	}
@@ -307,7 +307,7 @@ body {
 		}
 	}
 
-	//TODO zdjęcie do dokończenia
+	//TODO zdjęcie do dokończenia - mobile 500x500 wystarczy, na desktop prostokąt
 	&__img {
 		position: relative;
 		display: flex;
@@ -318,7 +318,9 @@ body {
 		padding-top: 6em;
 
 		img {
-			height: 300px;
+			min-width: 250px;
+			max-width: 60%;
+			// height: 300px;
 			filter: grayscale(1);
 		}
 	}
@@ -355,6 +357,11 @@ body {
 }
 
 @media (min-width: 768px) {
+	.text-title {
+		text-align: center;
+		font-size: 2rem;
+	}
+
 	.nav {
 		&__item {
 			font-size: 3.4rem;
@@ -382,11 +389,49 @@ body {
 			}
 		}
 	}
+
+	.abt-me {
+		margin: 3em;
+
+		&__quote {
+			max-width: 700px;
+			margin: 3em auto;
+			padding-bottom: 3em;
+
+			&-text {
+				font-size: 3rem;
+			}
+
+			&-quoter {
+				font-size: 12rem;
+			}
+		}
+
+		&__text {
+			&-lines {
+				font-size: 1.8rem;
+			}
+
+			&-more-btn,
+			&-less-btn {
+				font-size: 1.4rem;
+			}
+
+			&-short {
+				margin-top: 6em;
+			}
+		}
+	}
 }
 
 @media (min-width: 992px) {
 	.burger-btn {
 		display: none;
+	}
+
+	.text-title {
+		font-size: 2.5rem;
+		margin-top: 5em;
 	}
 
 	.nav {
@@ -498,6 +543,52 @@ body {
 					padding: 15px;
 				}
 			}
+		}
+	}
+
+	.abt-me {
+		display: flex;
+		margin: 2em auto;
+		width: 100%;
+		height: 100vh;
+
+		&__quote {
+			&-text {
+				font-size: 3.3rem;
+			}
+
+			&-quoter {
+				font-size: 15rem;
+			}
+		}
+
+		&__text {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			width: 50%;
+			padding: 2em;
+
+			&-lines {
+				font-size: 1.9rem;
+			}
+
+			&-more-btn,
+			&-less-btn {
+				margin: 0;
+				font-weight: bold;
+				border: none;
+				font-size: 1.6rem;
+			}
+
+			&-long {
+				padding-top: 0;
+			}
+		}
+
+		&__img {
+			width: 50%;
+			height: auto;
 		}
 	}
 }
