--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -10,7 +10,7 @@ $gray-4: #636e7b;
 $gray-5: #545d68;
 $gray-6: #444c56;
 $gray-7: #373e47;
-$gray-8: #2d333b;
+$gray-8: #1a1919;
 $gray-9: #222222;
 
 $background-dark: #222222;
