--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,16 +23,16 @@ body {
 }
 
 .wrapper {
-	margin: 0 auto;
+	margin: 2em auto;
 	width: 100%;
 	max-width: 1200px;
 }
 
 .text-title {
-	padding: 0.8em 0;
 	background-image: $gradient-180deg;
 	background-clip: text;
 	-webkit-text-fill-color: transparent;
+	text-align: center;
 	font-size: 1.7rem;
 }
 
@@ -227,7 +227,7 @@ body {
 		position: relative;
 		padding: 2em auto;
 		margin: 4em 0;
-		padding-bottom: 2em;
+		font-family: 'chakra_300_italic', sans-serif;
 
 		&-text {
 			text-align: center;
@@ -258,7 +258,7 @@ body {
 		padding-top: 2em;
 
 		&-lines {
-			margin-bottom: 1em;
+			margin-top: 1em;
 			line-height: 1.2em;
 			letter-spacing: 0.5px;
 
@@ -271,8 +271,8 @@ body {
 		&-less-btn {
 			position: absolute;
 			right: 0;
-			margin: 0.5em;
-			padding: 0.3em;
+			margin: 1em 0;
+			padding: 0.4em;
 			background: none;
 			border: 1px solid $background-light;
 			border-radius: 1px;
@@ -309,26 +309,78 @@ body {
 
 	//TODO zdjęcie do dokończenia - mobile 500x500 wystarczy, na desktop prostokąt
 	&__img {
-		position: relative;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		height: 100%;
 		width: 100%;
-		padding-top: 6em;
+		padding: 6em 1em;
 
 		img {
 			min-width: 250px;
 			max-width: 60%;
-			// height: 300px;
 			filter: grayscale(1);
 		}
 	}
 }
 
+.exp {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0 2em;
+	height: 75vh;
+	width: 100%;
+	background-color: $gray-8;
+	color: $gray-1;
+
+	&-road {
+		display: flex;
+		flex-direction: column;
+		text-align: center;
+
+		&__line {
+			margin: 2em auto;
+			height: 35px;
+			width: 2px;
+			background-color: $gray-1;
+		}
+
+		&__text {
+			font-family: 'chakra_300_light', sans-serif;
+
+			h5 {
+				padding-bottom: 0.3em;
+				font-size: 2rem;
+			}
+		}
+	}
+}
+
+// .skills {
+// 	margin-top: 5em;
+
+// 	&-boxes {
+// 		display: flex;
+// 		flex-direction: column;
+// 		justify-content: center;
+// 		align-items: center;
+		
+// 		&__tech {
+// 			padding: 1em;
+// 		}
+// 	}
+// }
+
+
 //____________________________________________________________
 
 @media (min-width: 576px) {
+
+	.text-title {
+		font-size: 2.2rem;
+	}
+
 	.header {
 		&__box {
 			&-text {
@@ -354,12 +406,26 @@ body {
 			}
 		}
 	}
+
+	.exp-road {
+		&__text {
+			font-size: 2rem;
+
+			h5 {
+				font-size: 3.5rem;
+			}
+		}
+
+		&__line {
+			height: 40px;
+			width: 3px;
+		}
+	}
 }
 
 @media (min-width: 768px) {
 	.text-title {
-		text-align: center;
-		font-size: 2rem;
+		font-size: 3rem;
 	}
 
 	.nav {
@@ -420,6 +486,21 @@ body {
 			&-short {
 				margin-top: 6em;
 			}
+		}
+	}
+
+	.exp-road {
+		&__text {
+			font-size: 2.5rem;
+
+			h5 {
+				font-size: 4rem;
+			}
+		}
+
+		&__line {
+			height: 50px;
+			width: 3px;
 		}
 	}
 }
@@ -589,6 +670,20 @@ body {
 		&__img {
 			width: 50%;
 			height: auto;
+		}
+	}
+
+	.exp {
+		height: 33vh;
+
+		&-road {
+			flex-direction: row;
+			justify-content: space-between;
+
+			&__line {
+				height: 3px;
+				width: 50px;
+			}
 		}
 	}
 }
