--- a/sass/main.scss
+++ b/sass/main.scss
@@ -357,26 +357,50 @@ body {
 	}
 }
 
-// .skills {
-// 	margin-top: 5em;
+.skills {
+	margin-top: 5em;
 
-// 	&-boxes {
-// 		display: flex;
-// 		flex-direction: column;
-// 		justify-content: center;
-// 		align-items: center;
-		
-// 		&__tech {
-// 			padding: 1em;
-// 		}
-// 	}
-// }
+	&-boxes {
+		display: flex;
+		flex-direction: column;
+		text-align: center;
 
+		&-title {
+			padding: 1.5em 0;
+			font-size: 2rem;
+		}
+
+		&__tech {
+			display: flex;
+			flex-direction: column;
+			padding-bottom: 2em;
+
+			&-list {
+				margin: 0.7em;
+			}
+		}
+
+		&__soft {
+			margin: 1em 0;
+
+			&-list {
+				text-align-last: center;
+				padding: 0 2.5em;
+				font-size: 1.7rem;
+				list-style-position: inside;
+				list-style-type: circle;
+
+				li {
+					padding: 0.5em;
+				}
+			}
+		}
+	}
+}
 
 //____________________________________________________________
 
 @media (min-width: 576px) {
-
 	.text-title {
 		font-size: 2.2rem;
 	}
