--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -3,7 +3,7 @@ $white: #f2f4f7;
 $pure-white: #fff;
 
 $gray-0: #cdd9e5;
-$gray-1: #adbac7;
+$gray-1: #909dab;
 $gray-2: #909dab;
 $gray-3: #768390;
 $gray-4: #636e7b;
@@ -16,7 +16,8 @@ $gray-9: #222222;
 $background-dark: #222222;
 $background-light: #cdd9e5;
 
-$font-dark: #909dab;
+$font-dark: #adbac7;
+$font-dark-2nd: #909dab; 
 $font-light: #2d333b;
 
 
