--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,7 +33,7 @@ body {
 	background-clip: text;
 	-webkit-text-fill-color: transparent;
 	text-align: center;
-	font-size: 1.7rem;
+	font-size: 2.5rem;
 }
 
 //NAV
@@ -223,6 +223,10 @@ body {
 .abt-me {
 	margin: 1.5em;
 
+	.text-title {
+		margin-left: -0.5em;
+	}
+
 	&__quote {
 		position: relative;
 		padding: 2em auto;
@@ -367,7 +371,7 @@ body {
 		text-align: center;
 
 		&-title {
-			padding: 1.5em 0;
+			padding: 1.5em;
 			font-size: 2rem;
 		}
 
