--- a/css/main.css
+++ b/css/main.css
@@ -372,7 +372,7 @@ body {
   padding: 0 2em;
   height: 75vh;
   width: 100%;
-  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.418), rgba(0, 0, 0, 0.911)), url("../img/bg-exp-small.jpg");
+  background-image: url("../img/bg-exp-small.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -658,5 +658,11 @@ body {
   .exp-road__line {
     height: 3px;
     width: 50px;
+  }
+  .exp-road__text {
+    transition: scale 0.3s;
+  }
+  .exp-road__text:hover {
+    scale: 1.1;
   }
 }/*# sourceMappingURL=main.css.map */
