--- a/sass/main.scss
+++ b/sass/main.scss
@@ -336,7 +336,7 @@ body {
 	padding: 0 2em;
 	height: 75vh;
 	width: 100%;
-	background-image: $bg-shadow, url('../img/bg-exp-small.jpg');
+	background-image: url('../img/bg-exp-small.jpg');
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -718,6 +718,14 @@ body {
 			&__line {
 				height: 3px;
 				width: 50px;
+			}
+
+			&__text {
+				transition: scale 0.3s;
+
+				&:hover {
+					scale: 1.1;
+				}
 			}
 		}
 	}
