Typo in _animations.scss - blinking-cursor

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @keyframes blinking-cursor {
   from {
-    border-right: 1px solid #909dab;
+    border-right: 1px solid #adbac7;
   }
   to {
     border-right: 1px solid transparent;
