--- a/css/main.css
+++ b/css/main.css
@@ -372,11 +372,11 @@ body {
   padding: 0 2em;
   height: 75vh;
   width: 100%;
-  background-image: url("../img/bg-exp-small.jpg");
+  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.418), rgba(0, 0, 0, 0.911)), url("../img/bg-exp-small.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  color: #adbac7;
+  color: #cdd9e5;
   filter: grayscale(0.8);
 }
 .exp-road {
@@ -399,7 +399,8 @@ body {
 }
 
 .skills {
-  margin-top: 5em;
+  padding-top: 8em;
+  width: 100%;
 }
 .skills-boxes {
   display: flex;
@@ -407,8 +408,8 @@ body {
   text-align: center;
 }
 .skills-boxes-title {
-  padding: 1.5em;
-  font-size: 2rem;
+  padding-top: 1.5em;
+  font-size: 2.2rem;
 }
 .skills-boxes__tech {
   display: flex;
@@ -416,16 +417,29 @@ body {
   padding-bottom: 2em;
 }
 .skills-boxes__tech-list {
+  padding-bottom: 3em;
   margin: 0.7em;
   color: #909dab;
+  font-size: 2rem;
+}
+.skills-boxes__tech-list:first-child {
+  padding-top: 1em;
+}
+.skills-boxes__tech-imgs {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.skills-boxes__tech-imgs img {
+  height: 5em;
+  padding: 0.5em;
+  filter: grayscale(0.8);
 }
 .skills-boxes__soft {
   margin: 1em 0;
 }
 .skills-boxes__soft-box-list {
-  -moz-text-align-last: center;
-       text-align-last: center;
-  padding: 0 2.5em;
+  padding: 0 2em;
   font-size: 1.7rem;
   list-style: none;
   color: #909dab;
@@ -461,6 +475,13 @@ body {
   .exp-road__line {
     height: 40px;
     width: 3px;
+  }
+  .skills {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  .skills-boxes__soft-box-list {
+    font-size: 2rem;
   }
 }
 @media (min-width: 768px) {
@@ -664,5 +685,46 @@ body {
   }
   .exp-road__text:hover {
     scale: 1.1;
+  }
+  .skills {
+    max-width: 1200px;
+  }
+  .skills-boxes-title {
+    font-size: 2.8rem;
+  }
+  .skills-boxes__tech {
+    flex-direction: row;
+  }
+  .skills-boxes__tech-list {
+    width: 33%;
+    font-size: 2.5rem;
+  }
+  .skills-boxes__tech-list:first-child {
+    padding: 0;
+    order: 1;
+  }
+  .skills-boxes__tech-list:last-child {
+    order: 2;
+  }
+  .skills-boxes__tech-list p {
+    padding-bottom: 1em;
+  }
+  .skills-boxes__tech-imgs img {
+    height: 3.8em;
+    padding: 0.4em;
+    transition: scale 0.5s, filter 0.5s;
+  }
+  .skills-boxes__tech-imgs img:hover {
+    scale: 1.3;
+    filter: grayscale(0);
+  }
+  .skills-boxes__soft-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .skills-boxes__soft-box-list {
+    text-align: left;
+    list-style: circle;
   }
 }/*# sourceMappingURL=main.css.map */
