--- a/sass/main.scss
+++ b/sass/main.scss
@@ -336,11 +336,11 @@ body {
 	padding: 0 2em;
 	height: 75vh;
 	width: 100%;
-	background-image: url('../img/bg-exp-small.jpg');
+	background-image: $bg-shadow, url('../img/bg-exp-small.jpg');
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
-	color: $font-dark;
+	color: #cdd9e5;
 	filter: grayscale(0.8);
 
 	&-road {
@@ -367,7 +367,8 @@ body {
 }
 
 .skills {
-	margin-top: 5em;
+	padding-top: 8em;
+	width: 100%;
 
 	&-boxes {
 		display: flex;
@@ -375,8 +376,8 @@ body {
 		text-align: center;
 
 		&-title {
-			padding: 1.5em;
-			font-size: 2rem;
+			padding-top: 1.5em;
+			font-size: 2.2rem;
 		}
 
 		&__tech {
@@ -385,8 +386,26 @@ body {
 			padding-bottom: 2em;
 
 			&-list {
+				padding-bottom: 3em;
 				margin: 0.7em;
 				color: $font-dark-2nd;
+				font-size: 2rem;
+
+				&:first-child {
+					padding-top: 1em;
+				}
+			}
+
+			&-imgs {
+				display: flex;
+				justify-content: space-evenly;
+				flex-wrap: wrap;
+
+				img {
+					height: 5em;
+					padding: 0.5em;
+					filter: grayscale(0.8);
+				}
 			}
 		}
 
@@ -394,8 +413,7 @@ body {
 			margin: 1em 0;
 
 			&-box-list {
-				text-align-last: center;
-				padding: 0 2.5em;
+				padding: 0 2em;
 				font-size: 1.7rem;
 				list-style: none;
 				color: $font-dark-2nd;
@@ -453,6 +471,15 @@ body {
 		&__line {
 			height: 40px;
 			width: 3px;
+		}
+	}
+
+	.skills {
+		max-width: 600px;
+		margin: 0 auto;
+
+		&-boxes__soft-box-list {
+			font-size: 2rem;
 		}
 	}
 }
@@ -725,6 +752,61 @@ body {
 
 				&:hover {
 					scale: 1.1;
+				}
+			}
+		}
+	}
+
+	.skills {
+		max-width: 1200px;
+		&-boxes {
+			&-title {
+				font-size: 2.8rem;
+			}
+
+			&__tech {
+				flex-direction: row;
+
+				&-list {
+					width: 33%;
+					font-size: 2.5rem;
+
+					&:first-child {
+						padding: 0;
+						order: 1;
+					}
+
+					&:last-child {
+						order: 2;
+					}
+
+					p {
+						padding-bottom: 1em;
+					}
+				}
+
+				&-imgs {
+					img {
+						height: 3.8em;
+						padding: 0.4em;
+						transition: scale 0.5s, filter 0.5s;
+
+						&:hover {
+							scale: 1.3;
+							filter: grayscale(0);
+						}
+					}
+				}
+			}
+
+			&__soft-box {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+
+				&-list {
+					text-align: left;
+					list-style: circle;
 				}
 			}
 		}
