--- a/css/main.css
+++ b/css/main.css
@@ -448,6 +448,46 @@ body {
   padding: 0.6em;
 }
 
+.hobby {
+  padding-top: 2em;
+  margin: 1.5em;
+}
+.hobby__box {
+  display: flex;
+  flex-direction: column;
+}
+.hobby__box-item {
+  display: flex;
+  flex-direction: column;
+  margin-top: 3em;
+}
+.hobby__box-item__img {
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  height: 8em;
+  width: 8em;
+  border: 2px solid #f2f4f7;
+  border-radius: 50%;
+  opacity: 0.7;
+}
+.hobby__box-item__img img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 65%;
+  filter: invert(0.9);
+}
+.hobby__box-item__text {
+  margin-top: 1em;
+}
+.hobby__box-item__text h3 {
+  text-align: center;
+  margin-bottom: 0.5em;
+  font-size: 2.2rem;
+}
+
 @media (min-width: 576px) {
   .text-title {
     font-size: 2.7rem;
@@ -537,6 +577,30 @@ body {
   }
   .skills {
     padding-top: 1em;
+  }
+  .hobby__box {
+    display: flex;
+    flex-direction: column;
+  }
+  .hobby__box-item {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  .hobby__box-item__img {
+    height: 200px;
+    width: 200px;
+  }
+  .hobby__box-item__text {
+    width: 60%;
+    font-size: 1.8rem;
+  }
+  .hobby__box-item__text h3 {
+    font-size: 2.6rem;
+  }
+  .hobby__box-item--left {
+    flex-direction: row-reverse;
+    padding: 2em 0;
   }
 }
 @media (min-width: 992px) {
@@ -731,5 +795,15 @@ body {
   .skills-boxes__soft-box-list {
     text-align: left;
     list-style: circle;
+  }
+  .hobby__box-item__img {
+    height: 250px;
+    width: 250px;
+  }
+  .hobby__box-item__text {
+    width: 65%;
+  }
+  .hobby__box-item__text h3 {
+    font-size: 2.8rem;
   }
 }/*# sourceMappingURL=main.css.map */
