--- a/sass/main.scss
+++ b/sass/main.scss
@@ -231,18 +231,29 @@ body {
 		position: relative;
 		padding: 2em auto;
 		margin: 4em 0;
+		color: hsl(0 0% 100% / 0.2);
 		font-family: 'chakra_300_italic', sans-serif;
-		color: $font-dark-2nd;
-
+		
 		&-text {
 			text-align: center;
 			font-size: 2.5rem;
+			
+			span {
+				background-image: linear-gradient(90deg, $white, $white);
+				background-clip: text;
+				background-repeat: no-repeat;
+				background-size: 0% 100%;
+				animation: text-reveal linear forwards;
+				animation-timeline: view(y);
+				animation-range-start: cover 5vh;
+				animation-range-end: cover 45vh;
+				
+			}
 		}
 
 		&-quoter {
 			position: absolute;
 			font-size: 10rem;
-			opacity: 0.2;
 
 			&:first-child {
 				top: -0.4em;
@@ -898,9 +909,7 @@ body {
 
 	.hobby {
 		&__box {
-
 			&-item {
-
 				&__img {
 					height: 250px;
 					width: 250px;
