--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -1,29 +1,34 @@
 @use 'colors' as *;
 
 @keyframes blinking-cursor {
-    from {
-        border-right: 1px solid $font-dark;
-    }
-    to {
-        border-right: 1px solid transparent;
-    }
+	from {
+		border-right: 1px solid $font-dark;
+	}
+	to {
+		border-right: 1px solid transparent;
+	}
 }
 
-
 @keyframes breath-animation {
-    0% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(1.5);
-    }
-    100% {
-        transform: scale(1);
-    }
+	0% {
+		transform: scale(1);
+	}
+	50% {
+		transform: scale(1.5);
+	}
+	100% {
+		transform: scale(1);
+	}
 }
 
 @keyframes text-reveal {
-    to {
-        background-size: 100% 100%;
-    }
+	to {
+		background-size: 100% 100%;
+	}
+}
+
+@keyframes fade-out {
+	to {
+		opacity: 0;
+	}
 }
