--- a/css/main.css
+++ b/css/main.css
@@ -445,7 +445,7 @@ body {
   flex-wrap: wrap;
 }
 .skills-boxes__tech-imgs img {
-  height: 5em;
+  height: 4em;
   padding: 0.5em;
   filter: grayscale(0.8);
 }
@@ -610,6 +610,9 @@ body {
   }
   .skills {
     padding-top: 1em;
+  }
+  .skills-boxes__tech-imgs img {
+    height: 5em;
   }
   .hobby__box {
     display: flex;
