--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -25,8 +25,8 @@ $bg-shadow: linear-gradient(45deg, rgba(0, 0, 0, 0.418), rgba(0, 0, 0, 0.911));
 $nav-shadow: linear-gradient(180deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.001));
 
 
-$gradient-180deg: linear-gradient(180deg, #2af598 0%, #239fec 100%);
-$gradient-to-right: linear-gradient(to right, rgb(50, 124, 243) 0%, rgb(65, 201, 137) 100%);
+$gradient-180deg: linear-gradient(180deg, #f5d02a 0%, #d64f10 100%);
+$gradient-to-right: linear-gradient(to right, rgb(240, 243, 50) 0%, rgb(201, 176, 65) 100%);
 
 
 
