--- a/sass/main.scss
+++ b/sass/main.scss
@@ -347,7 +347,7 @@ body {
 	background-position: center;
 	background-attachment: fixed;
 	color: #cdd9e5;
-	filter: grayscale(0.8);
+	filter: grayscale(0.6);
 
 	&-road {
 		display: flex;
@@ -478,10 +478,13 @@ body {
 	}
 }
 
+.counter {
+	display: none;
+}
+
 //____________________________________________________________
 
 @media (prefers-reduced-motion: no-preference) {
-
 	.header__box {
 		&-text,
 		&-socialmedia {
@@ -684,6 +687,50 @@ body {
 					flex-direction: row-reverse;
 					padding: 2em 0;
 				}
+			}
+		}
+	}
+
+	.counter {
+		position: relative;
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		padding: 5em 0;
+		margin: 20vh 0;
+		
+		&-bg {
+			position: absolute;
+			height: 100%;
+			width: 100%;
+			background-image: $bg-shadow, url('../img/bg-counter.jpg');
+			background-size: cover;
+			background-position: center;
+			background-attachment: fixed;
+			z-index: -5;
+			filter: grayscale(0.6);
+		}
+
+		&-item {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+
+			p {
+				font-size: 2rem;
+				font-weight: bold;
+			}
+
+			h5 {
+				margin: 1em;
+				text-transform: uppercase;
+				font-size: 1.4rem;
+			}
+
+			img {
+				height: 4em;
+				filter: invert(0.8);
 			}
 		}
 	}
@@ -952,6 +999,23 @@ body {
 						font-size: 2.8rem;
 					}
 				}
+			}
+		}
+	}
+
+	.counter {
+
+		&-item {
+			p {
+				font-size: 2.2rem;
+			}
+
+			h5 {
+				font-size: 1.6rem;
+			}
+
+			img {
+				height: 4.5em;
 			}
 		}
 	}
