--- a/css/main.css
+++ b/css/main.css
@@ -385,6 +385,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 0 2em;
+  margin: 5em 0;
   height: 75vh;
   width: 100%;
   background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.418), rgba(0, 0, 0, 0.911)), url("../img/bg-exp-small.jpg");
