--- a/sass/main.scss
+++ b/sass/main.scss
@@ -340,6 +340,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	padding: 0 2em;
+	margin: 5em 0;
 	height: 75vh;
 	width: 100%;
 	background-image: $bg-shadow, url('../img/bg-exp-small.jpg');
