--- a/sass/main.scss
+++ b/sass/main.scss
@@ -474,6 +474,11 @@ body {
 					margin-bottom: 0.5em;
 					font-size: 2.2rem;
 				}
+
+				p {
+					line-height: 1.1;
+					font-size: 1.8rem;
+				}
 			}
 		}
 	}
@@ -681,6 +686,10 @@ body {
 
 					h3 {
 						font-size: 2.5rem;
+					}
+
+					p {
+						font-size: 2rem;
 					}
 				}
 
