--- a/css/main.css
+++ b/css/main.css
@@ -667,7 +667,7 @@ body {
     background-position: center;
     background-attachment: fixed;
     z-index: -5;
-    filter: grayscale(0.6);
+    filter: sepia(1) blur(2px);
   }
   .counter-item {
     display: flex;
