--- a/sass/main.scss
+++ b/sass/main.scss
@@ -718,7 +718,7 @@ body {
 			background-position: center;
 			background-attachment: fixed;
 			z-index: -5;
-			filter: grayscale(0.6);
+			filter: sepia(1) blur(2px);
 		}
 
 		&-item {
